--- a/src/app/question2/question2.component.html
+++ b/src/app/question2/question2.component.html
@@ -1,3 +1,4 @@
+<p>question2 works!</p>
 <div>
     <h1>{{ title }}</h1>
     <p [ngStyle]="{'color': textColor, 'background-color': backgroundColor, 'font-size': fontSize}">
